small/2025-03-21_15-48-28.590.log
INFO: Invocation ID: dd62c402-f9dc-42dc-9b87-887d4432ca43
INFO: Streaming build results to: https://dash.idx.dfinity.network/invocation/dd62c402-f9dc-42dc-9b87-887d4432ca43
Computing main repo mapping: 
WARNING: Streamed test output requested. All tests will be run locally, without sharding, one at a time
Loading: 
Loading: 0 packages loaded
WARNING: Build option --test_env has changed, discarding analysis cache (this can be expensive, see https://bazel.build/advanced/performance/iteration-speed).
Analyzing: target //rs/tests/networking:canister_http_stress_test (0 packages loaded, 0 targets configured)
Analyzing: target //rs/tests/networking:canister_http_stress_test (0 packages loaded, 0 targets configured)

Analyzing: target //rs/tests/networking:canister_http_stress_test (0 packages loaded, 61021 targets configured)

INFO: Analyzed target //rs/tests/networking:canister_http_stress_test (0 packages loaded, 62613 targets configured).
[3,649 / 5,408] checking cached actions
[7,830 / 7,832] Compiling Rust rlib canister_http (1 files) [for tool]; 0s remote-cache, linux-sandbox
ERROR: /ic/rs/tests/networking/canister_http/BUILD.bazel:10:13: Compiling Rust rlib canister_http (1 files) [for tool] failed: (Exit 1): process_wrapper failed: error executing Rustc command (from target //rs/tests/networking/canister_http:canister_http) bazel-out/k8-opt-exec-ST-d57f47055a04/bin/external/rules_rust/util/process_wrapper/process_wrapper --arg-file ... (remaining 176 arguments skipped)

Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
error[E0425]: cannot find value `BN_NAME` in this scope
  --> rs/tests/networking/canister_http/canister_http.rs:81:35
   |
81 |     let bn_vm = BoundaryNode::new(BN_NAME.to_string())
   |                                   ^^^^^^^ not found in this scope

error[E0425]: cannot find value `BN_NAME` in this scope
   --> rs/tests/networking/canister_http/canister_http.rs:120:62
    |
120 |     env.sync_with_prometheus_by_name("", env.get_playnet_url(BN_NAME));
    |                                                              ^^^^^^^ not found in this scope

error[E0425]: cannot find value `BN_NAME` in this scope
   --> rs/tests/networking/canister_http/canister_http.rs:123:37
    |
123 |         .get_deployed_boundary_node(BN_NAME)
    |                                     ^^^^^^^ not found in this scope

error[E0425]: cannot find value `BN_NAME` in this scope
   --> rs/tests/networking/canister_http/canister_http.rs:130:25
    |
130 |         "Boundary node {BN_NAME} has IPv4 {:?} and IPv6 {:?}",
    |                         ^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared crate or module `canister_http`
  --> rs/tests/networking/canister_http/canister_http.rs:77:5
   |
77 |     canister_http::start_httpbin_on_uvm(&env);
   |     ^^^^^^^^^^^^^ use of undeclared crate or module `canister_http`
   |
help: there is a crate or module with a similar name
   |
77 |     canister_test::start_httpbin_on_uvm(&env);
   |     ~~~~~~~~~~~~~

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0425, E0433.
For more information about an error, try `rustc --explain E0425`.
[7,831 / 7,832] 1 / 1 tests, 1 failed; checking cached actions
Target //rs/tests/networking:canister_http_stress_test failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 7.462s, Critical Path: 3.55s
INFO: 2 processes: 2 internal.
ERROR: Build did NOT complete successfully
FAILED: 
//rs/tests/networking:canister_http_stress_test                 FAILED TO BUILD

Executed 0 out of 1 test: 1 fails to build.
INFO: Streaming build results to: https://dash.idx.dfinity.network/invocation/dd62c402-f9dc-42dc-9b87-887d4432ca43
